Feature/aareg bytte fra soap til rest (#2801)
* Lagt til domeneklasser for AAREG

* Lagt til ny proxy for ny aareg rest #deploy-aaregister-proxy

* Oppdatert proxy #deploy-aaregister-proxy

* Oppdatert proxy config #deploy-aaregister-proxy

* Lagt til mer funksjonalitet på opprett arbeidsforhold

* Oppdatering rettiong av feil + ny funksjonalitet

* Oppdatering med endreArbeidforhold ++ #deploy-backend-dev

* Rettet feil etter merge-konflikt + rettet tegnfeil rapportert i PR review #deploy-backend-dev

* Rettet feil på gjenopprett person #deploy-backend-dev

* Rettet feil + Sonar trivia #deploy-backend-dev

* Sonar trivia #deploy-backend-dev

* sjekker for not null bestillingerById før bruker den (#2803)

* Dolly backend/krr sletting (#2802)

* sletter krr person data

* sonar public test fiks

* Retter feil ved pensjonsoppretting POPP (#2804)

Retter feil ved pensjonsoppretting POPP

* Fiks på gjenopprett person og gruppe

* Øket codec størrelse til 500k

* Feature/naviger aktoerid (#2793)

* Aktoerid søk og endringer på design for å vise at dette er mulig
* Mindre pakkeoppdatering

* Fiks på pensjon #deploy-backend-dev (#2807)

Fiks på pensjon

* Fikset problem ved oppretting av utenlandsk adresse

* Fikset problem ved oppretting av utenlandsk adresse #deploy-backend-dev (#2810)

* Lagt til sluttårsak  #deploy-backend-dev

* Redeploy  #deploy-backend-dev

* Redeploy  #deploy-backend-dev

* Retting av NP  #deploy-backend-dev

* Redeploy proxy #deploy-aaregister-proxy

* Oppdateringer, lagt på permisjonsId  #deploy-backend-dev

* Rettet feil #deploy-backend-dev

* Redeploy #deploy-backend-dev

* Rettet feil #deploy-backend-dev

Co-authored-by: Dainius <dainiusfigoras@gmail.com>
Co-authored-by: Stian Gustavsson <stian.gustavsson@nav.no>