@@ -8,7 +8,6 @@ import no.nav.dolly.domain.resultset.RsStatusRapport;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 import static java.util.Collections.emptyList;
 import static java.util.Collections.singletonList;
@@ -40,7 +39,7 @@ public final class BestillingKontoregisterStatusMapper {
                                         .melding(decodeMsg(entry.getKey()))
                                         .identer(entry.getValue())
                                         .build())
-                                .collect(Collectors.toList()))
+                                .toList())
                         .build());
     }
 }
