@@ -8,11 +8,11 @@ import no.nav.dolly.domain.resultset.RsStatusRapport;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 import static java.util.Collections.emptyList;
 import static java.util.Collections.singletonList;
 import static no.nav.dolly.domain.resultset.SystemTyper.SIGRUNSTUB;
+import static no.nav.dolly.mapper.AbstractRsStatusMiljoeIdentForhold.decodeMsg;
 import static no.nav.dolly.util.ListUtil.listOf;
 import static org.apache.commons.lang3.StringUtils.isNotBlank;
 
@@ -37,10 +37,10 @@ public final class BestillingSigrunStubStatusMapper {
                 singletonList(RsStatusRapport.builder().id(SIGRUNSTUB).navn(SIGRUNSTUB.getBeskrivelse())
                         .statuser(statusMap.entrySet().stream()
                                 .map(entry -> RsStatusRapport.Status.builder()
-                                        .melding(entry.getKey())
+                                        .melding(decodeMsg(entry.getKey()))
                                         .identer(entry.getValue())
                                         .build())
-                                .collect(Collectors.toList()))
+                                .toList())
                         .build());
     }
 }
